# dacal-stream-learning

./: .gitignore  .pre-commit-config.yaml  EXP--Drift-Localization-using-Conformal-Predictions.py  README.md  conformal_localizer.py  dataloader.py  generate_synthetic_data.py  plotting.py  pyproject.toml  requirements.txt  tree_localizer.py  util.py
.devcontainer/: devcontainer.json
.github/workflows/: ruff.yml
configs/: cifar10c_stream.yaml  synthetic_drift_stream.yaml
docs/: cifar10c_stream_config.md  model_config.md  synthetic_drift_stream_config.md
playground/: CIFAR-10-C.ipynb  CIFAR-10-C_Conformal.ipynb  CIFAR-10-C_OOD_Conformal.ipynb  CIFAR10C_conformal_drift_merged.ipynb  CIFAR10C_conformal_drift_merged_upgrade_working.ipynb  CIFAR10C_konformal_drift_upgrade.ipynb  CIFAR10C_multi_conformal_mmd.ipynb  compare_conformal_protocols.py  conformal_localizer_sudden3.ipynb  lsudden_3_eda.ipynb  moving_rbf.ipynb  sea_concepts_eda.ipynb  simplecnn_cifar10_seed42_ep10.pt
scripts/: download_CIFAR-10-C.sh  download_LSudden_3.sh  download_SEA_concepts.sh
src/: main.py
src/active_learning/: __init__.py  base.py
src/conformal/: __init__.py  base.py  classification_conformal.py  conformal_localizer.py  localizer_calibrator.py  util.py
src/data/: __init__.py  base.py  cifar10c_stream_dataset.py  stream_dataset.py  synthetic_dataset.py  synthetic_drift_dataset.py
src/drift/: __init__.py  base.py
src/engine/: __init__.py  simulation_builder.py  state.py  stream_engine.py
src/experiments/: __init__.py  protocol_compare.py
src/factories/: __init__.py  calibrator_factory.py  dataset_factory.py  detector_factory.py  model_factory.py  policy_factory.py  task_factory.py
src/models/: __init__.py  base.py  lightning_wrappers.py  simple_cnn.py  sklearn_predictor.py
tests/: conftest.py  test_conformal_localizer.py  test_protocol_compare.py  test_synthetic_drift_dataset.py
tests/factories/: test_dataset_factory.py
