[project]
name = "dacal-stream-learning"
version = "0.0.1"
description = "A stream learning library for concept drift detection and adaptive learning."
requires-python = ">=3.12,<3.13"
dependencies = [
    "asttokens==3.0.1",
    "cfgv==3.5.0",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "distlib==0.4.0",
    "executing==2.2.1",
    "filelock==3.25.2",
    "fonttools==4.62.1",
    "gitdb==4.0.12",
    "gitpython==3.1.41",
    "identify==2.6.18",
    "ipykernel==7.2.0",
    "ipython==9.11.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kiwisolver==1.5.0",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "nest-asyncio==1.6.0",
    "nodeenv==1.10.0",
    "numpy==2.4.3",
    "packaging==26.0",
    "pandas==2.3.3",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "pillow==12.1.1",
    "platformdirs==4.9.4",
    "pre-commit==4.5.1",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-discovery==1.1.3",
    "pytz==2026.1.post1",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "river==0.23.0",
    "ruff==0.15.7",
    "scipy==1.17.1",
    "setuptools==78.1.1",
    "six==1.17.0",
    "smmap==5.0.3",
    "stack-data==0.6.3",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "tornado==6.5.5",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "virtualenv==21.2.0",
    "wcwidth==0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]

select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort imports
    "B",   # bugbear (important bug detection)
    "UP",  # pyupgrade
    "SIM", # simplifications
    "C4",  # comprehensions
]

ignore = [
    "E501",  # allow long lines (handled by formatter)
]

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = [
    "active_learning",
    "drift",
    "conformal",
    "models",
    "tasks",
    "engine",
]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # allow re-export imports
